--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #005433;
     height: 100%;
     margin:0;
     font-size: 15px;
@@ -36,7 +37,7 @@ span{
 }
 #menu{
     margin:-17px;
-    color: #f99451;
+    color: #b97d43;
     font-size: 11px;
     font-weight: 500;
 }
@@ -66,7 +67,7 @@ span{
 }
 .side-nav a:hover{
     color:#fff;
-    background-color: #f99451
+    background-color: #b97d43
 }
 hr{
     width: 190px;
@@ -79,16 +80,16 @@ hr{
     margin-left:50px;
 }
 /*
-*Main background and logo
+*Main Background and Logo
 */
 .background{
+    position: relative;
     margin-bottom: 0px;
     background-image: url("../images/ChikkibarJumbo.png");
     min-height: 500px;
     min-width: 1024px;
     width: 100%;
     height: auto;
-    position: fixed;
     left: 0;
 }
 @media screen and (max-width: 1024px) { 
@@ -115,3 +116,125 @@ hr{
 /*
 * Sections
 */
+.section1{
+    margin-bottom: 0;
+    padding:30px;
+    padding-left:70px;
+    padding-right:70px;
+    position: relative;
+    background-color: #ddd;
+    text-align: center;
+    color: rgb(29, 28, 28);
+    letter-spacing: 1px;
+
+}
+.section2{
+    margin-bottom: 0;
+    padding:30px;
+    padding-left:70px;
+    padding-right:70px;
+    position: relative;
+    background-color: #ddd;
+    text-align: center;
+    color: rgb(29, 28, 28);
+    letter-spacing: 1px;
+}
+.section3{
+    margin-bottom: 0;
+    padding:30px;
+    position: relative;
+    background-color: #ddd;
+    text-align: center;
+    color: rgb(29, 28, 28);
+    letter-spacing: 1px;
+}
+.images{
+    margin-bottom: 0;
+    padding:30px;
+    position: relative;
+    background-color: #282e34;
+    text-align: center;
+    color: rgb(29, 28, 28);
+    letter-spacing: 1px;
+}
+
+.pimg1 {
+    background-image: url("../images/ChikkiSlider1.jpg");
+    min-height: 400px;
+    position: relative;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;   
+    background-size: cover;
+    -webkit-backface-visibility: hidden;
+
+}
+.pimg2 {
+    background-image: url("../images/ChikkiSlider2.jpg");
+    min-height: 400px;
+    position: relative;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;   
+    background-size: cover;
+    -webkit-backface-visibility: hidden;
+
+}
+
+.ptext{
+    position: absolute;
+    top:50%;
+    width:100%;
+    text-align: center;
+    color:rgb(29, 28, 28);
+    font-size: 27px;
+    letter-spacing: 8px;
+    display: inline-block;
+}
+/*
+*Images
+*/
+.slider{
+    -webkit-transition: 0.1s ease;
+}
+.slider:hover{
+    transform: scale(1.1);
+}
+
+/*
+*Footer
+*/
+.chikkiFooter{
+    text-align: center;
+    background-color: #005433;
+    padding:20px;
+    bottom: 0;
+    padding: 20px;
+    width: 100%;
+    color: #ddd;    
+}
+/*
+*Young Entreprenuers Page
+*/
+
+.young{
+    margin-bottom: 0;
+    position: relative;
+    background-color: #282e34;
+    text-align: center;
+    color: rgb(29, 28, 28);
+}
+.young p{
+    margin-left: 10px;
+    color: #ddd;
+}
+.young h2{
+    margin-left: 10px;
+    padding: 10px;
+    color: #ddd;
+}
+.young img{
+    float: left;
+    margin-bottom: 20px;
+    margin-right: 10px;
+}
